Bug 251719 - getDisplayMedia does not require a list of every screen and window
Summary: getDisplayMedia does not require a list of every screen and window
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebRTC (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Eric Carlson
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-03 13:23 PST by Eric Carlson
Modified: 2023-07-27 08:57 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Carlson 2023-02-03 13:23:54 PST
getDisplayMedia requires a prompt and user selection, so we should never need to build a list of every window and screen.
Comment 1 Radar WebKit Bug Importer 2023-02-03 13:24:07 PST
<rdar://problem/105018387>
Comment 2 Eric Carlson 2023-02-03 13:46:05 PST
Pull request: https://github.com/WebKit/WebKit/pull/9625
Comment 3 EWS 2023-02-07 11:19:32 PST
Committed 259969@main (1ad6bf1f3f6c): <https://commits.webkit.org/259969@main>

Reviewed commits have been landed. Closing PR #9625 and removing active labels.